# rp2350-serial-bootloader

./: CMakeLists.txt  bootloader.ld  combined.ld  combined.py  download.ps1  gen_imghdr.py  main.c  standalone.ld  this_ocd.cfg
